# Rise-and-Shine

./: .DS_Store.orig  .gitignore  README.md  config.yml
assets/json/: assets.json  clientjoin.json  constants.json  dreamylevel.json  gamescene.json  level1.json  level2.json  level3.json  level6.json  level7.json  level8.json  levelselect.json  loading.json  lobby.json  menu.json  nightlevel.json  server.json  settings.json  templatelevel.json  templatelevel2.json  templatelevel3.json  tutoriallevel.json  victory.json
assets/sounds/: riser_riser.m4a
assets/widgets/: colorbutton.json  labelbox.json  textbutton.json  textfield.json
cugl/: README.md  __main__.py
cugl/__pycache__/: __main__.cpython-311.pyc.orig
cugl/buildfiles/android/jni/: Application.mk  CMakeLists.txt
cugl/buildfiles/apple/cugl.xcodeproj/: project.pbxproj
cugl/buildfiles/cmake/: CMakeLists.txt
cugl/buildfiles/windows/: cugl.sln
cugl/include/cugl/: cugl.h
cugl/include/cugl/assets/: CUAsset.h  CUAssetManager.h  CUFontLoader.h  CUGenericLoader.h  CUJsonLoader.h  CUJsonValue.h  CULoader.h  CUScene2Loader.h  CUSoundLoader.h  CUTextureLoader.h  CUWidgetLoader.h  CUWidgetValue.h
cugl/include/cugl/audio/: CUAudioDecoder.h  CUAudioDevices.h  CUAudioEngine.h  CUAudioSample.h  CUAudioTypes.h  CUAudioWaveform.h  CUSound.h  cu_audio.h
cugl/include/cugl/base/: CUApplication.h  CUBase.h  CUDisplay.h  CUEndian.h  cu_base.h
cugl/include/cugl/input/: CUAccelerometer.h  CUGameController.h  cu_input.h
cugl/include/cugl/io/: CUBinaryReader.h  CUBinaryWriter.h  CUTextReader.h  CUTextWriter.h
cugl/include/cugl/math/: CUAffine2.h  CUColor4.h  CUMat4.h  CUMathBase.h  CUPath2.h  CUQuaternion.h  CUVec2.h  CUVec3.h  CUVec4.h  cu_math.h
cugl/include/cugl/net/: CUICEAddress.h  CUInetAddress.h  CUNetcodeChannel.h  CUNetcodeConfig.h  CUNetcodeConnection.h  CUNetcodePeer.h  (+3 more)
cugl/include/stduuid/: uuid.h
cugl/include/utf8/: utf8checked.h  utf8unchecked.h
cugl/licenses/: GoogleService-Info.plist  LICENSE.SDL_app.txt  LICENSE.SDL_atk.txt  README.md
cugl/scripts/: __init__.py  android.py  apple.py  cmake.py  iconify.py  util.py  windows.py
cugl/scripts/__pycache__/: __init__.cpython-311.pyc.orig  android.cpython-311.pyc.orig  apple.cpython-311.pyc.orig  cmake.cpython-311.pyc.orig  iconify.cpython-311.pyc.orig  util.cpython-311.pyc.orig  windows.cpython-311.pyc.orig
cugl/sdlapp/: README.md  __main__.py
cugl/sdlapp/buildfiles/cmake/: CMakeLists.txt
cugl/sdlapp/buildfiles/cmake/sdl2/: CMakeLists.txt
cugl/sdlapp/buildfiles/cmake/sdl2/modules/: sdlchecks.cmake
cugl/sdlapp/buildfiles/cmake/sdl2app/: CMakeLists.txt
cugl/sdlapp/buildfiles/cmake/sdl2atk/: CMakeLists.txt
cugl/sdlapp/buildfiles/cmake/sdl2atk/modules/: PrivateSdlFunctions.cmake  SDL2_atk.pc.in  SDL2_atkConfig.cmake.in
cugl/sdlapp/buildfiles/cmake/sdl2image/: CMakeLists.txt
cugl/sdlapp/buildfiles/cmake/sdl2ttf/: CMakeLists.txt
cugl/sdlapp/include/: ATK_audio.h  ATK_codec.h  ATK_dsp.h  ATK_error.h  ATK_file.h  ATK_math.h  ATK_rand.h  SDL_app.h  SDL_atk.h
cugl/sdlapp/scripts/: android.py  apple.py  cmake.py  iconify.py  windows.py
cugl/sdlapp/templates/: README.md
cugl/source/assets/: CUAssetManager.cpp  CUFontLoader.cpp  CUJsonLoader.cpp  CUJsonValue.cpp  CUScene2Loader.cpp  CUSoundLoader.cpp  CUTextureLoader.cpp  CUWidgetLoader.cpp
cugl/source/audio/: CUAudioDecoder.cpp  CUAudioDevices.cpp  CUAudioEngine.cpp  CUAudioQueue.cpp  CUAudioSample.cpp  CUAudioTypes.cpp  CUAudioWaveform.cpp  CUSound.cpp  todo.txt
cugl/source/base/: CUApplication.cpp  CUDisplay.cpp
cugl/source/input/: CUAccelerometer.cpp  CUGameController.cpp  CUKeyboard.cpp  CUMouse.cpp  CUTouchscreen.cpp
cugl/source/io/: CUTextWriter.cpp
cugl/source/math/: CUAffine2.cpp  CUColor4.cpp  CUMat4.cpp  CUPath2.cpp  CUPoly2.cpp  CUPolynomial.cpp  CUQuaternion.cpp  CURect.cpp  CUSize.cpp  CUSpline2.cpp  CUVec2.cpp  CUVec3.cpp  CUVec4.cpp
cugl/source/net/: CUICEAddress.cpp  CUInetAddress.cpp  CUNetcodeChannel.cpp  CUNetcodeConfig.cpp  CUNetcodeConnection.cpp  CUNetcodePeer.cpp  CUNetcodeSerializer.cpp  CUNetworkLayer.cpp
cugl/source/physics2/: CUDistanceJoint.cpp  CUFrictionJoint.cpp  CUGearJoint.cpp  CUJoint.cpp  CUMotorJoint.cpp  CUMouseJoint.cpp  CUObstacle.cpp  CUObstacleSelector.cpp  CUObstacleWorld.cpp  CUPolygonObstacle.cpp  CUPrismaticJoint.cpp  CUPulleyJoint.cpp  CURevoluteJoint.cpp  CUWeldJoint.cpp  CUWheelJoint.cpp
cugl/source/render/: CUCamera.cpp  CUFont.cpp  CUGradient.cpp  CURenderBase.cpp  CURenderTarget.cpp  CUScissor.cpp  CUShader.cpp  CUSpriteBatch.cpp  CUSpriteSheet.cpp  CUStencilEffect.cpp  CUTextLayout.cpp  CUTexture.cpp  CUTextureRenderer.cpp  CUUniformBuffer.cpp  CUVertexBuffer.cpp  notes.txt
cugl/source/scene2/: CUScene2Texture.cpp
cugl/source/util/: CUFiletools.cpp  CULogger.cpp  CUStrings.cpp
cugl/templates/cmake/: CMakeLists.txt  ReadMe.md
cugl/templates/windows/: __project__.sln
scripts/: tiled_level_parser.py
source/: App.cpp  App.h  AudioController.cpp  AudioController.h  Bird.cpp  Bird.h  Bird.hpp  ClientJoinScene.cpp  ClientJoinScene.h  CollisionController.cpp  CollisionController.h  DirtTimer.h  GameAudioController.cpp  GameAudioController.h  GameScene.cpp  GameScene.h  GameplayController.cpp  GameplayController.h  InputController.cpp  InputController.h  LevelScene.cpp  LevelScene.h  LoadingScene.cpp  LoadingScene.h  LobbyScene.cpp  LobbyScene.h  MenuScene.cpp  MenuScene.h  NetStructs.cpp  NetStructs.h  NetworkConfig.cpp  NetworkConfig.h  NetworkController.cpp  NetworkController.h  PlayerCharacter.cpp  PlayerCharacter.h  Projectile.cpp  Projectile.h  ProjectileSet.cpp  ProjectileSet.h  (+31 more)
source/controllers/: DirtThrowInputController.cpp  DirtThrowInputController.h  GameAudioController.cpp  GameplayController.cpp  GameplayController.h  InputController.h  NetworkController.cpp  NetworkController.h
source/models/: Bird.cpp  Bird.h  PlayerCharacter.cpp  PlayerCharacter.h  ProjectileSet.h  StaticFilth.h
source/old-code/: DirtTimer.cpp
source/views/: GameScene.cpp  GameScene.h  LevelScene.h  LoadingScene.cpp  MenuScene.cpp
(+307 files in other folders)
